<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_Position" Id="{afd84c02-4bca-432a-abd9-9aca660f6c08}">
    <Declaration><![CDATA[TYPE T_Position : DINT; END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>