<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="FB_Immutable_Array" Id="{a8982a15-abc5-4b19-b49c-92d0a5ff17b2}" SpecialFunc="None">
    <Declaration><![CDATA[// Collection that exposes only immutable methods and properties of a collection that implements I_Array.
{attribute 'enable_dynamic_creation'}
FUNCTION_BLOCK FB_Immutable_Array EXTENDS FB_Collection IMPLEMENTS I_Immutable_Array
VAR_INPUT
	ipArray : I_Array;
END_VAR
VAR
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF THIS^.ipArray = 0 THEN RETURN; END_IF
THIS^._Count := THIS^.ipArray._Count;]]></ST>
    </Implementation>
    <Property Name="_Count" Id="{99ff51c3-033d-44cc-9fc6-aecfcf6d4506}">
      <Declaration><![CDATA[// Number of items in the collection.
PROPERTY _Count : T_Capacity]]></Declaration>
      <Get Name="Get" Id="{87b270f1-1950-4b49-8f00-a3ddec27098a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF
	
_Count := THIS^.Count := THIS^.ipArray._Count;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="_Error_Status" Id="{799f87fb-78d8-4939-9140-bf686d432539}">
      <Declaration><![CDATA[// Error status of the collection.
PROPERTY _Error_Status : T_Error]]></Declaration>
      <Get Name="Get" Id="{6f4c08bc-e992-4198-8b41-c0ab24dc6943}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF
	
_Error_Status := THIS^.Error := THIS^.ipArray._Error_Status;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="_Is_Empty" Id="{4f1bde34-ca3b-425c-8d68-2cc4634a233b}">
      <Declaration><![CDATA[// Checks if collection is empty.
PROPERTY _Is_Empty : BOOL]]></Declaration>
      <Get Name="Get" Id="{6c796871-a8a4-4b9c-b645-3cc209c53aa5}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF
	
_Is_Empty := THIS^.ipArray._Is_Empty;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Contains" Id="{6dd66849-b548-429f-8ded-2480f7bc4309}">
      <Declaration><![CDATA[// Checks if item is contained in list.
METHOD Contains : BOOL
VAR_INPUT
	Item : ANY; // Item to find in list
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF

Contains := THIS^.ipArray.Contains(Item);

THIS^._Error_Status := THIS^.ipArray._Error_Status;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Get" Id="{77c72f5c-b82c-4723-882d-cc7c0717efa1}">
      <Declaration><![CDATA[// Gets item from list at specified location without removing it.
METHOD Get : I_Immutable_List
VAR_INPUT
	Index : T_Position; // Location of item
	Item : ANY;  // Variable to store returned item
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Get := THIS^;

IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF

THIS^.ipArray.Get(Index, Item, bSuccess => bSuccess);

THIS^._Error_Status := THIS^.ipArray._Error_Status;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Get_As_String" Id="{4f6fd165-773e-4fdd-a613-a74bffdacd9f}">
      <Declaration><![CDATA[// Returns item as a string, if type to string conversion is supported.
METHOD Get_As_String : I_Immutable_List
VAR_INPUT
	Index : T_Position; // Location of item
	sItem : REFERENCE TO STRING; // Variable to store returned item.
END_VAR
VAR_OUTPUT
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Get_As_String := THIS^;

IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF

THIS^.ipArray.Get_As_String(Index, sItem, bSuccess => bSuccess);

THIS^._Error_Status := THIS^.ipArray._Error_Status;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Get_Type_At" Id="{e027f4ec-001f-4173-883a-1e329403812d}">
      <Declaration><![CDATA[// Gets the type of the item at specified location.
METHOD Get_Type_At : I_Immutable_Array
VAR_INPUT
	Index : T_Position;
END_VAR
VAR_OUTPUT
	Item_Type : T_Type := T_Type.TYPE_NONE;
	bSuccess : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Get_Type_At := THIS^;

IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF

THIS^.ipArray.Get_Type_At(Index, Item_Type => Item_Type, bSuccess => bSuccess);

THIS^._Error_Status := THIS^.ipArray._Error_Status;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Search" Id="{d8ac1575-cf54-4528-ba61-dcd626a8e998}">
      <Declaration><![CDATA[// Find the location of an item in list.
METHOD Search : I_Immutable_List
VAR_INPUT
	Item : ANY; // Item to find in list
END_VAR
VAR_OUTPUT
	Index : T_Position := -1; //Location of item in list 
	bSuccess : BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Search := THIS^;

IF THIS^.ipArray = 0 THEN 
	_Error_Status := THIS^.Error := F_Error(TRUE, GVL_Errors.ERR_INVALID_INTERFACE, 'The interface ipArray is null.');
	RETURN; 
	END_IF

THIS^.ipArray.Search(Item, Index => Index, bSuccess => bSuccess);

THIS^._Error_Status := THIS^.ipArray._Error_Status;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Immutable_Array">
      <LineId Id="29" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array._Count.Get">
      <LineId Id="8" Count="2" />
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array._Error_Status.Get">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array._Is_Empty.Get">
      <LineId Id="8" Count="2" />
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array.Contains">
      <LineId Id="15" Count="2" />
      <LineId Id="6" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array.Get">
      <LineId Id="11" Count="1" />
      <LineId Id="25" Count="2" />
      <LineId Id="10" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array.Get_As_String">
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="25" Count="2" />
      <LineId Id="10" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array.Get_Type_At">
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="18" Count="2" />
      <LineId Id="14" Count="3" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="FB_Immutable_Array.Search">
      <LineId Id="11" Count="1" />
      <LineId Id="25" Count="2" />
      <LineId Id="10" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>